[metadata]
name = littleflow
version = 0.10.1
author = Alex Miłowski
author_email = alex@milowski.com
description = A little flow language for workflows
license = Apache License 2.0
url = https://github.com/alexmilowski/littleflow

[options]
packages =
   littleflow
include_package_data = True
install_requires =
	lark
	numpy
	click
	pyyaml

[options.package_data]
* = *.json, *.yaml

