[metadata]
name = littleflow_redis
version = 0.3.0
author = Alex Miłowski
author_email = alex@milowski.com
description = An integration of littleflow an Redis for remote execution.
license = Apache License 2.0
url = https://github.com/alexmilowski/littleflow

[options]
packages =
   littleflow_redis
include_package_data = True
install_requires =
	littleflow
	rqse
	Flask
	click
	flasgger
	pyyaml
	requests
	boto3

[options.package_data]
* = *.json, *.yaml

