[metadata]
name = littleflow_redis
version = 0.6.1
author = Alex Miłowski
author_email = alex@milowski.com
description = An integration of littleflow an Redis for remote execution.
license = Apache License 2.0
url = https://github.com/alexmilowski/littleflow

[options]
packages =
   littleflow_redis
   littleflow_redis.console
   littleflow_redis.console.assets.css
   littleflow_redis.console.assets.js
   littleflow_redis.console.templates
   littleflow_redis.service
include_package_data = True
install_requires =
	littleflow
	rqse
	Flask
	click
	flasgger
	pyyaml
	requests
	boto3
	pyjwt[crypto]

[options.package_data]
* = *.json, *.yaml, *.html, *.js, *.css

